--- a/quotes/templates/home.html
+++ b/quotes/templates/home.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 
+{% if ticker %}
+{{ ticker }}
+{% endif %}
+
 {% if api %}
     {% if api == "Error..." %}
         There was a problem with your ticker symbol... please try again...
