--- a/quotes/templates/base.html
+++ b/quotes/templates/base.html
@@ -26,10 +26,13 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'add_stock' %}">Add Stock</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'delete_stock' %}">Delete Stock</a>
+              </li>
             </ul>
             <form class="d-flex" action="{% url 'home' %}" method="POST">
               {% csrf_token %}
-              <input class="form-control me-2" name="ticker_symbol" type="search" placeholder="Get Quote" aria-label="Search">
+              <input class="form-control me-2" name="ticker" type="search" placeholder="Get Quote" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Qoute</button>
             </form>
           </div>
@@ -38,6 +41,19 @@
 
     <div class="container">
         <br/>
+
+    {% if messages %}
+
+        {% for msg in messages %}
+        <div class="alert alert-success alert-dismissable" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;
+            </button>
+            {{ msg }}
+        </div>
+        {% endfor %}
+
+    {% endif %}
+
     {% block content %}
 
     {% endblock %}
